Fixed overflow issue with page header

--- a/src/modules/page_header/page_header.scss
+++ b/src/modules/page_header/page_header.scss
@@ -100,6 +100,9 @@ $pageHeaderCurves: (
   @include sizeCurve('padding-top', pageHeaderTop, $pageHeaderCurves);
   @include sizeCurve(padding-bottom, pageHeaderBottom, $pageHeaderCurves);
 
+  z-index: $zIndexInner;
+  overflow: visible;
+
   &__logo-container {
     height: 0;
 
